fixed marquee overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -104,11 +104,13 @@ body {
 #mapName {
     font-size: 34px !important;
     height: 41px;
+}
+
+.marqueeBody {
     max-width: 400px !important;
     overflow: hidden;
     padding-right: 5px;
 }
-
 .marquee {
     width: max-content;
     white-space: pre;
